# sugarcane-ai

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: talk.data
data/talks/: hello.word
src/base/: main.cpp  storage.cpp  storage.h  sugarcane.h
src/include/: base.h  string.h
src/lib/: base.h  string.h
src/sugarcane/: sugarcane-talk.cpp  sugarcane.cpp  sugarcane.h
src/teeworlds/: astar.h  sugarcane.cpp
tws-maps/AliveFNG/: 904352696.map
tws-maps/dummy/: -695166185.map
tws-maps/infc_altepetl/: -2034560032.map  256150707.map
tws-maps/infc_backwaters/: -1146701276.map  -1940625110.map  2016216791.map
tws-maps/infc_bamboo/: -1162305484.map  1473519815.map  1646468324.map
tws-maps/infc_bamboo2/: -266414337.map  -487190248.map  1365354387.map  764415127.map
tws-maps/infc_bamboo3/: -2015275101.map  -485068148.map
tws-maps/infc_canyon/: -1356012304.map  -778569143.map  1972837102.map  2095558513.map
tws-maps/infc_chashitsu/: 1195966638.map  1414878034.map  2010611319.map
tws-maps/infc_cmc-overworld-1/: 161324134.map
tws-maps/infc_damascus/: -1507934164.map  -32963812.map  1228892958.map  1515531260.map
tws-maps/infc_darkcave/: -314778510.map  1200186116.map
tws-maps/infc_darkcave_v2/: 1292565677.map  1977307678.map
tws-maps/infc_deathdealer/: -1287574845.map  1206900566.map  355484817.map
tws-maps/infc_eidalfitr/: -475185974.map  -739950257.map  1676447461.map  903238350.map
tws-maps/infc_floatingislands/: -1912339054.map  -51807260.map  131014942.map  1433751346.map
tws-maps/infc_half_provence/: -2016392004.map  -2092817378.map  (+2 more)
(+98 files in other folders)
